# otus_cpp_pro_10-2023

./: .gitignore  .gitmodules  README.md  annotated.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespaceimpl.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  print__ip_8h.html  print__ip_8h__dep__incl.map  print__ip_8h__dep__incl.md5  print__ip_8h__incl.map  print__ip_8h__incl.md5  print__ip_8h_source.html  structimpl_1_1is__same__tuple__types-members.html  structimpl_1_1is__same__tuple__types.html  structimpl_1_1is__same__tuple__types_3_010_00_01Args_8_8_8_01_4-members.html  structimpl_1_1is__same__tuple__types_3_010_00_01Args_8_8_8_01_4.html  structimpl_1_1is__same__tuple__types_3_011_00_01Args_8_8_8_01_4-members.html  structimpl_1_1is__same__tuple__types_3_011_00_01Args_8_8_8_01_4.html  structis__same__tuple__types-members.html  structis__same__tuple__types.html  utils_8cpp.html  utils_8cpp__incl.map  utils_8cpp__incl.md5  utils_8h.html  (+3 more)
.github/workflows/: hw1.yml  hw2.yml  hw3.yml  hw4.yml  hw6.yml
hw1_github_actions/: CMakeLists.txt  helloworld_test.cpp  lib.cpp  main.cpp
hw2_ip_filter/: CMakeLists.txt
hw2_ip_filter/src/: CMakeLists.txt  constants.h  io_ip.h  ipv4_address.cpp  ipv4_address.h  main.cpp  utils.cpp  utils.h
hw2_ip_filter/unit_tests/: CMakeLists.txt  io_ip_tests.cpp  ipv4_address_tests.cpp  utils_tests.cpp
hw3_allocator/: CMakeLists.txt
hw3_allocator/src/: CMakeLists.txt  main.cpp  pool_allocator.h  utils.cpp  utils.h
hw3_allocator/src/containers/: list_container.h  list_container.inl  sequence_container.h  sequence_container.inl
hw3_allocator/test/: CMakeLists.txt  pool_allocator_test.cpp
hw4_print_ip/: CMakeLists.txt  Doxyfile  main.cpp  print_ip.h  utils.cpp  utils.h
hw6_matrix/: CMakeLists.txt  main.cpp  matrix.h  utils.cpp
hw7_bulk/: CMakeLists.txt  arguments.h  bulk.cpp  bulk.h  command.cpp  command.h  main.cpp  utils.cpp  utils.h
hw7_bulk/handler/: CMakeLists.txt  dynamic_handler.cpp  dynamic_handler.h  handler_pool.cpp  handler_pool.h  handler_type.h  i_handler.cpp  i_handler.h  static_handler.cpp  static_handler.h
hw7_bulk/input/: CMakeLists.txt  basic_istream_command_reader.h  basic_istream_command_reader.inl  command_reader_factory.h  command_reader_factory.inl  i_command_reader.cpp  i_command_reader.h  input_data.h  reader_type.h
hw7_bulk/output/: CMakeLists.txt  basic_ostream_block_writer.h  basic_ostream_block_writer.inl  block_writer_factory.h  block_writer_factory.inl  i_block_writer.cpp  i_block_writer.h  log_block_writer.cpp  log_block_writer.h  writer_type.h
search/: all_0.js  all_2.js  all_4.js  classes_0.js  functions_1.js  functions_2.js  searchdata.js  variables_0.js  variables_1.js
